--- a/themes/Bootstrap.css
+++ b/themes/Bootstrap.css
@@ -24,7 +24,8 @@ button,
 .ui-btn {
 	font-size: 1em;
 	line-height: 1.3;
-	 font-family: "Helvetica Neue",Helvetica,Arial,sans-serif /*{global-font-family}*/;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; /*{global-font-family}*/
+	
 }
 legend,
 .ui-input-text input,
