Adding the website's fonts to the mobile look

--- a/themes/application.css
+++ b/themes/application.css
@@ -9,20 +9,20 @@
 .section_div {
 	margin: 15px; 
 	font-size: 20px;
-	font-family: 'Helvetica'; 
-	font-weight: normal; 
+/*	font-weight: normal; */	
 	border-bottom: 1px solid #dddddd !important; 
-	font-weight: normal; 
 	margin-top: 30px; 
 	border-top: 1px solid #dddddd !important;
 	padding-bottom: 8px !important;
 	padding-top: 8px !important;
+	color: #4a4a4a; 
+	font:20px/1.5 'Trebuchet MS', Arial;
 }
 
 .info_div {
-	font-family: 'Droid Sans', sans-serif;
 	margin-top: 20px; 
 	padding-bottom: 0px !important;
+	font: 15px/1 'Trebuchet MS', Arial;"
 }
 
 
