--- a/themes/Bootstrap.css
+++ b/themes/Bootstrap.css
@@ -456,8 +456,8 @@ html .ui-bar-b .ui-btn:visited,
 html .ui-body-b .ui-btn:visited,
 html body .ui-group-theme-b .ui-btn:visited,
 html head + body .ui-btn.ui-btn-b:visited {
-	background: #0044cc /*{b-bup-background-color}*/;
-	border-color: #0056bc /*{b-bup-border}*/;
+	background: #95c066 /*{b-bup-background-color}*/;
+	border-color: #4b7333 /*{b-bup-border}*/;
 	color: #ffffff /*{b-bup-color}*/;
 	text-shadow: 0 /*{b-bup-shadow-x}*/ 0 /*{b-bup-shadow-y}*/ 0 /*{b-bup-shadow-radius}*/ #ffffff /*{b-bup-shadow-color}*/;
 }
@@ -467,8 +467,8 @@ html .ui-bar-b .ui-btn:hover,
 html .ui-body-b .ui-btn:hover,
 html body .ui-group-theme-b .ui-btn:hover,
 html head + body .ui-btn.ui-btn-b:hover {
-	background: #0044CC /*{b-bhover-background-color}*/;
-	border-color: #0056bc /*{b-bhover-border}*/;
+	background: #95c066 /*{b-bhover-background-color}*/;
+	border-color: #4b7333 /*{b-bhover-border}*/;
 	color: #ffffff /*{b-bhover-color}*/;
 	text-shadow: undefined /*{b-bhover-shadow-x}*/ undefined /*{b-bhover-shadow-y}*/ undefined /*{b-bhover-shadow-radius}*/ undefined /*{b-bhover-shadow-color}*/;
 }
