--- a/themes/Bootstrap.css
+++ b/themes/Bootstrap.css
@@ -176,7 +176,7 @@ html .ui-alt-icon .ui-radio-off:after {
 	box-shadow: 0 1px 0 rgba(255,255,255,.4) /*{global-icon-shadow}*/;
 }
 /* Checkbox and radio */
-.ui-btn.ui-checkbox-off:after,
+/*.ui-btn.ui-checkbox-off:after,
 .ui-btn.ui-checkbox-on:after,
 .ui-btn.ui-radio-off:after,
 .ui-btn.ui-radio-on:after {
@@ -193,7 +193,7 @@ html .ui-alt-icon .ui-radio-off:after {
 .ui-btn.ui-checkbox-off:after,
 .ui-btn.ui-checkbox-on:after {
 	-webkit-border-radius: .1875em;
-	border-radius: .1875em;
+	border-radius: .1875em;*/
 }
 .ui-radio .ui-btn.ui-radio-on:after {
 	background-image: none;
