--- a/themes/Bootstrap.css
+++ b/themes/Bootstrap.css
@@ -726,7 +726,7 @@ html body .ui-group-theme-d .ui-bar-inherit {
 .ui-page-theme-d,
 .ui-page-theme-d .ui-panel-wrapper {
 	background: #FFFFFF /*{d-page-background-color}*/;
-	border-color: #cccccc /*{d-page-border}*/;
+	border-color: #51A351 /*{d-page-border}*/;
 	color: #333333 /*{d-page-color}*/;
 	text-shadow: 0 /*{d-page-shadow-x}*/ 0 /*{d-page-shadow-y}*/ 0 /*{d-page-shadow-radius}*/ #000000 /*{d-page-shadow-color}*/;
 }
@@ -738,7 +738,7 @@ html .ui-body-d .ui-body-inherit,
 html body .ui-group-theme-d .ui-body-inherit,
 html .ui-panel-page-container-d {
 	background: #FFFFFF /*{d-body-background-color}*/;
-	border-color: #cccccc /*{d-body-border}*/;
+	border-color: #51A351 /*{d-body-border}*/;
 	color: #333333 /*{d-body-color}*/;
 	text-shadow: 0 /*{d-body-shadow-x}*/ 0 /*{d-body-shadow-y}*/ 0 /*{d-body-shadow-radius}*/ #000000 /*{d-body-shadow-color}*/;
 }
