--- a/themes/application.css
+++ b/themes/application.css
@@ -44,7 +44,7 @@
 
 .drop_button {
 	font-size: 16px;
-	color: white;
+	color: #444444;
 	font-family: Helvetica, sans-serif;
 	height: 40px;
 	/*vertical-align: middle;*/
